--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "workout-mobile",
+    "name": "potata",
     "slug": "workout-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
