--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
-    "@react-navigation/native": "^6.1.18",
+    "@react-native-picker/picker": "^2.10.1",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.3",
     "expo": "~51.0.23",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.32.0",
-    "react-native-web": "~0.19.10",
-    "expo-updates": "~0.25.27"
+    "react-native-reanimated": "^3.16.3",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
