--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-picker/picker": "^2.10.1",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.3",
@@ -19,8 +20,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.3",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
