--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "workout-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/main-logo.png",
+    "icon": "./assets/couch_potato.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/main-logo.png",
+      "image": "./assets/couch_potato.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -16,7 +16,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/main-logo.png",
+        "foregroundImage": "./assets/couch_potato.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.mamaboylay.workoutmobile"
