--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.1",
+    "@expo/metro-runtime": "~4.0.0",
     "@react-native-community/blur": "^4.4.1",
-    "@react-native-picker/picker": "^2.10.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.3",
-    "expo": "~51.0.23",
-    "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.3",
+    "expo": "^52.0.0",
+    "expo-status-bar": "~2.0.0",
+    "expo-updates": "~0.26.9",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.16.3",
+    "react-native-reanimated": "~3.16.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2"
   },
   "private": true
 }
